feat(trader): get traders
