# api/swagger/swagger.yaml
@@ -87,7 +87,7 @@ paths:
           description: OK - created successfully
           schema: 
             $ref: "#/definitions/Strategy"
-  /traderm5/create:
+  /tradersm5:
     # binds a127 app logic to a route
     x-swagger-router-controller: trader-m5.controller
     post:
@@ -111,6 +111,31 @@ paths:
           schema:
             # a pointer to a definition
             $ref: "#/definitions/EventResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    get:
+      tags: 
+        - trader-m5
+      security:
+        - jwt: []
+        - api_key: []
+      description: gets all trader-m5 for a user
+      operationId: get
+      parameters:
+        - name: _id
+          description: the optional trader id
+          in: query
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/TraderQuery"
         default:
           description: Error
           schema:
@@ -232,6 +257,38 @@ definitions:
       created:
         type: string
         format: date-time
+  TraderQuery:
+    type: object
+    properties:
+      created: 
+        type: string
+        format: date-time
+        description: the date time the trader created
+      updated: 
+        type: string
+        format: date-time
+        description: last time the trader updated 
+      status: 
+        type: string
+        enum:
+          - Created
+          - In
+          - Out
+        description: the last status of the trader
+      version: 
+        type: number
+        description: the version number of the trader
+      instrument: 
+        type: string
+        enum:
+          - AUD_USD
+        description: the instrument that the trader is using
+      id: 
+        type: string
+        description: the id of the trader
+      userId: 
+        type: string
+        description: the owner of the trader
   TraderEventPayload:
     type: object
     required:
